# trip-analysis

./: main.py  pyproject.toml  requirements.txt  train.ipynb  trip-analysis.ipynb
Trip-analysis-rui-furtado/: README.md  pyproject.toml  trip-analysis.ipynb
