[project]
name = "trip-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastpivot>=0.1.13",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
]
